--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "easymde": "^2.18.0",
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.4",
+    "lottie-react": "^2.4.0",
     "next": "^13.4.19",
     "next-auth": "^4.24.5",
     "nvm": "^0.0.4",
